fix image jump on login screen

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -3,7 +3,7 @@
 }
 
 .login-left {
-    max-width: 50%;
+    width: 50%;
     object-fit: cover;
 }
 
